[package]
name = "http-request"
version = "0.1.0"
edition = "2021"

authors = ["Garot Conklin <gconklin@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A simple static HTTP file server, for learning and local development"
homepage = "https://github.com/garotm/rust"
repository = "https://github.com/garotm/rust/http-request"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.12"
clap = "2.33.0"
comrak = "0.6.2"
crates.io = "0.12.4"
derive_more = "0.15.0"
env_logger = "0.6.2"
futures-preview = "0.3.0-alpha.19"
handlebars = "1.1.0"
http = "0.1.19"
hyper = "0.14.16"
log = "0.4.8"
mime = "0.3.14"
mime_guess = "2.0.1"
percent-encoding = "2.1.0"
reqwest = "0.11.9"
serde = { version = "1.0.102", features = ["derive"] }
tokio = "0.2.0-alpha.6"
tokio-fs = "0.2.0-alpha.6"
structopt = "0.2.18"